@@ -23,7 +23,7 @@
 #include <config.h>
 #include "helloapp.h"
 
-#include <libgnome/libgnome.h>
+#include <libgnome.h>
 
 /* Keep a list of all open application windows */
 static GSList* app_list = NULL;
